# matchmaking

./: .gitignore  matchmaking.sln
FootballClient/FootballClient/: Client.cs  FootballClient.csproj  Invite.cs  MMClient.cs  Player.cs  Program.cs  Token.cs
FootballServer/: FootballServer.sln
FootballServer/FootballServer/: FootballServer.csproj  FootballServer.sln  Invite.cs  Program.cs  Token.cs
HistoryBattlesServer/: App.config  HBPlayer.cs  HistoryBattlesServer.csproj  HistoryBattlesServer.sln  MessageType.cs  Program.cs
HistoryBattlesServer/ExternalServices/: ApiService.cs
HistoryBattlesServer/Properties/: AssemblyInfo.cs
HistoryBattlesServer/Requests/: CreateRoomRequest.cs  GetUserRequest.cs  JoinRoomRequest.cs  LeaveRoomRequest.cs  Request.cs  ShowRoomsRequest.cs
HistoryBattlesServer/Responses/: Response.cs  RoomListResult.cs  StartGameResponse.cs
HistoryBattlesServer/Rooms/: RoomManager.cs  RoomParams.cs
MatchmakingClient/: CMakeLists.txt  a.out  client.cpp  client.h  main.cpp  matchmaking_client.cpp  matchmaking_client.h  message.cpp  message.h  message_types.h  request.h  responses.h  room.h
MatchmakingServer/: Message.cs  Player.cs  Server.cs  WebService.cs  matchmaking.csproj  matchmaking.sln
TestClient/: Packet.cs  Program.cs  TestClient.csproj
TestClient/Properties/: AssemblyInfo.cs
TestServer/: Program.cs  TestServer.csproj
TestServer/Properties/: AssemblyInfo.cs
matchmaking/: ConnectionManager.cs  JsonUtills.cs  Message.cs  Packet.cs  Player.cs  Program.cs  Serialization.cs  Server.cs  matchmaking.csproj  matchmaking.sln
(+55 files in other folders)
